integration_tests/src/snapshots/integration_tests__cnft_tests__cnft_owners_table-base.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 180
expression: response
snapshot_kind: text
---
{
  "total": 1,
  "limit": 5,
  "page": 1,
  "items": [
    {
      "interface": "V1_NFT",
      "id": "4k41XV45LUyX2iRSdw8bvwPmKF9y7SNLi9imUGWc3ADS",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://arweave.net/rtwIkSB6YhNjaUjnSxUiiDV6BwJ_W2pLw8Mfhj6lvBo",
        "files": [],
        "metadata": {
          "name": "Rolling Canvas #1 | Sketch Paper",
          "symbol": "",
          "token_standard": "NonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "EZ2pnS9heCAV7V6evtWeucEKdUaB6Y4Vca4W6ZuBJN81",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": true,
        "data_hash": "APHE858V4tkWqVATytfgTupRJBeg8aQfwCEvssd9kZVc",
        "creator_hash": "8KdDUqVPXcyvBch2atwAxEyf8Ym3TfB5khSkZRSgoYxR",
        "asset_hash": "3TP6JZ2e3CPzoktSC1cx5K8GM2dWrS6F8xuM51m78Tqr",
        "tree": "8Uyk1cZGDcytRBdyKkqHJhTAvSPzSNDDEJTacWUEW8p6",
        "seq": 258421,
        "leaf_id": 170433
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "STKM3PzeFc6kdJiMXyQ3pRDa3ERCEGgM9NbPPGb2Rft",
          "verified": true
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.065,
        "basis_points": 650,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [
        {
          "address": "STK8wk9npcTtCLHEeLc3MkfqvTQ3Pai37qbZBxuKV2Z",
          "share": 0,
          "verified": true
        },
        {
          "address": "WoMbXFtdfH8crq2Zi7bQhfGx2Gv8EN4saP13gcdUGog",
          "share": 23,
          "verified": false
        },
        {
          "address": "6sYxGBdpzfABtHRrHERFvS92y9yv4Sxwo8EFCvjU2vv7",
          "share": 77,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "F3MdnVQkRSy56FSKroYawfMk1RJFo42Quzz8VTmFzPVz"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false
    }
  ]
}
