integration_tests/src/snapshots/integration_tests__cnft_tests__mint_no_json_uri.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 41
expression: response
snapshot_kind: text
---
{
  "interface": "V1_NFT",
  "id": "DFRJ4PwAze1mMQccRmdyc46yQpEVd4FPiwtAVgzGCs7g",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "",
    "files": [],
    "metadata": {
      "name": "",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "GMdA1G1CDKNaiE1xGNJnB2KyNJVLCzvEcZ6P62SYSL3Z",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "6V4Uaz1QF1cnwAPGegnAZXd1oHcG3vydcXPDz2Rzpnzi",
    "creator_hash": "AVgJYLS3Mex1pAkfXikHzfWF4Pvf924ESXswRTXRVMik",
    "asset_hash": "HKvUDBDmeFo727WTYiE9SdR7bqpkQeJecZQoJbUep9Pg",
    "tree": "67B3xvadpVeBJ6MT5tQqBqntrBeLNjrWbcF6uEAH1EEi",
    "seq": 4,
    "leaf_id": 3
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "GG6KuiAjG4hhg2AYdtjSoCG1QesgRFjTaok5MLxmAF3k",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "7WS6MiWdcqN7woEu8Vw8vGTmwxudPqQFts84jkvsDx9W",
      "share": 100,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "347kSWBNPm6Z3VFZZXAcKnT4T7v4WVQYw5b2xPJxp6zA"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
