integration_tests/src/snapshots/integration_tests__cnft_tests__mint_to_collection_unverify_collection.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 41
expression: response
snapshot_kind: text
---
{
  "interface": "V1_NFT",
  "id": "2gEbvG3Cb6JRaGWAx5e85Bf5z4u37EURBeyPBqXDzZoY",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://metaplex.com",
    "files": [],
    "metadata": {
      "name": "test",
      "symbol": "TST",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "AR6is91KeUbiYrSCrHAQfBk3J2jApxefAiWMm55nD9o5",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "8M8DpVvA1aGNMV6xMViDyEF9oS89VKqbWsxBfUNkGGQ9",
    "creator_hash": "4q4TdVGLUpKPvHqZT57xM66gZyAjViQdPPsZKoHPRZni",
    "asset_hash": "2MYeWSm5mv3FXUyTDeD247uCfEMzpDRaU2ZYMMhRDjga",
    "tree": "ChxiXfVhkP7LYminiaFJRLQmRigRmLPw3iduEAvjpz3L",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "DdyrHTfN4wskbqTm3NDbAvRDsqiewzkuMboMRYJmNG6A",
      "verified": false
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc",
      "share": 55,
      "verified": false
    },
    {
      "address": "CxPipfKpggvxG5ne5SD23c2JFz3TMNqrN1Vjr1vj8NFK",
      "share": 45,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Fq4HDXfutKjEZ7zZP2JmKboSm2ZsYsKEJ7BLQAfrpNcc"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": 0
  },
  "mutable": false,
  "burnt": false
}
