integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_thaw_and_revoke_v2.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 694
expression: asset_after
---
{
  "interface": "V1_NFT",
  "id": "4mR5wxNQjrUgaJZeVdVG55uB4CKm2CUejTXxLgGNm6Vv",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "8Yc5juey3R8k2rLogZ8fGaYjSKgDKuL3WkGNMAEKLSDk",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "EHnEc36MD4gW2VvnJZ8LCDovJFRamyWSgfAh9EckHSdP",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "2cArij4GTPmZHDwXMHAv9J6je5JmFVK4kgBKtGk3XYvS",
    "tree": "85himwjHNm9EQP9DvNF7TQzM6U2Qdo9wFU2bxPh5xXXL",
    "seq": 3,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "DdcZfZfTnX2SEV8fWYKSdRz85nHmfqdxx7M74paxC2jC"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
